# Eco-Logic-A-Carbon-Footprint-Analysis-System

./: Main.hs  eco-logic.cabal  frontend.html  stack.yaml
backend/: Main.hs  frontend.html
backend/dist-newstyle/cache/: config  solver-plan  source-hashes  up-to-date
dist-newstyle/cache/: compiler  elaborated-plan  improved-plan  plan.json
